# lerobot-instruction-synthesis

./: .cursorrules  .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  enrich_with_llm_demo.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: html_demo_guide.md  multi_level_instructions_guide.md  project_report.md  technical_design.md
docs/freestyle_data_collection/: README.md  implementation_guide.md  project_overview.md  research_proposal.md  technical_specification.md
examples/: quickstart.py
lesynthesis/: README_llm_enrichment.md  __init__.py  __main__.py  enrich_with_llm.py  enrich_with_llm_server.py  synthesizer.py  web_server.py
tests/: __init__.py  test_cli_commands.py  test_cli_examples.py  test_cli_integration.py  test_enrich_with_llm.py  test_readme_examples.py  test_synthesizer.py
